--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/MohamedAmineSafi04/learning-nodejs-1#readme",
   "dependencies": {
-    "slugify": "^1.6.5"
+    "slugify": "^1.6.5",
+    "superagent": "^8.0.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
